force-app/main/default/objects/Payments__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <formula>Invoice__r.Name</formula>
    <label>Invoice Number</label>
    <type>Text</type>
</CustomField>