force-app/main/default/objects/Payments__c/fields/QB_WorkOrder_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_WorkOrder_ID__c</fullName>
    <formula>Work_Warranty_Order__r.QBInvoiceID__c</formula>
    <label>QB WorkOrder ID</label>
    <type>Text</type>
</CustomField>