force-app/main/default/objects/Payments__c/fields/QuickBook_WO_Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>QuickBook_WO_Payment_ID__c</fullName>
    <label>QuickBook WO Payment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>