force-app/main/default/objects/Payments__c/fields/Return_Change__c.field-meta.xml
<CustomField>
    <fullName>Return_Change__c</fullName>
    <label>Return Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>