force-app/main/default/objects/Payments__c/fields/Return_Parts_Amount__c.field-meta.xml
<CustomField>
    <fullName>Return_Parts_Amount__c</fullName>
    <label>Return Parts Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>