force-app/main/default/objects/Payments__c/fields/WO_Closed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>WO_Closed_Date_Time__c</fullName>
    <formula>Work_Warranty_Order__r.ClosedDate__c</formula>
    <label>WO Closed Date/Time</label>
    <type>DateTime</type>
</CustomField>