force-app/main/default/objects/Payments__c/fields/Work_Order_Job__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Job</label>
    <referenceTo>Work_Order_Job__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>