force-app/main/default/objects/Payments__c/fields/Work_Warranty_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Warranty_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work/Warranty Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>